fix storybook docs in dark mode

--- a/ui/public/storybook-overrides.css
+++ b/ui/public/storybook-overrides.css
@@ -14,6 +14,15 @@
 }
 
 /* Override dark mode in Storybook docs so text is legible. */
-[data-story-block='true'] {
-    color: hsl(0 0% 20%);
+@media (prefers-color-scheme: dark) {
+    /* Nuke --lightningcss custom props. No idea why compiled CSS contains these! */
+    [data-story-block='true'] {
+        --lightningcss-light: ;
+        --lightningcss-dark: ;
+    }
+
+    [data-story-block='true'],
+    baseline-status {
+        color: initial;
+    }
 }
